i've created the button menu

--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
 </head>
 <body>
     <main> 
-        <nav>
-            <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="iframe" rel="external">#</a>
-            <a href="">#</a>
-            <a href="">#</a>
-            <a href="">#</a>
-            <a href="">#</a>
-            <a href="">#</a>
-        </nav>   
         <section id="iphone">
-            <iframe src="home.html" name="tela" frameborder="0" id="tela"></iframe>
+            <iframe src="home.html" name="tela" frameborder="0" id="tela"> Seu navegador não é compatível para mostrar esse conteúdo</iframe>
         </section>
+
         <section id="redes-sociais">
-            
+            <a href="" target="_self" rel="external"><img src="imagens/logo-home.jpg" alt="facebook-logo"> </a>
+            <a href="" target="_blank" rel="external"><img src="imagens/logo-github.jpg" alt=""> </a>
+            <a href="" target="_blank" rel="external"><img src="imagens/logo-facebook.jpg" alt=""> </a>
+            <a href="https://www.instagram.com/deen_martins/" target="_blank" rel="external"><img src="imagens/logo-instagram.jpg" alt=""> </a>
+            <a href="" target="_blank" rel="external"><img src="imagens/logo-twitter.jpg" alt=""> </a>
+            <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank" rel="external"><img src="imagens/logo-youtube.jpg" alt=""> </a>   
         </section>
     </main>
 </body>
