--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         </section>
 
         <section id="redes-sociais">
-            <a href="" target="_self" rel="external"><img src="imagens/logo-home.jpg" alt="facebook-logo"> </a>
-            <a href="" target="_blank" rel="external"><img src="imagens/logo-github.jpg" alt=""> </a>
-            <a href="" target="_blank" rel="external"><img src="imagens/logo-facebook.jpg" alt=""> </a>
-            <a href="https://www.instagram.com/deen_martins/" target="_blank" rel="external"><img src="imagens/logo-instagram.jpg" alt=""> </a>
-            <a href="" target="_blank" rel="external"><img src="imagens/logo-twitter.jpg" alt=""> </a>
-            <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank" rel="external"><img src="imagens/logo-youtube.jpg" alt=""> </a>   
+            <a href="home.html" target="tela" rel="external"><img src="imagens/logo-home.jpg" alt="home-logo"></a>
+            <a href="imagens/tela-github.jpg" target="tela" rel="external"><img src="imagens/logo-github.jpg" alt="github-logo"></a>
+            <a href="facebook.html" target="tela" rel="external"><img src="imagens/logo-facebook.jpg" alt="facebook-logo"></a>
+            <a href="instagram.html" target="tela" rel="external"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a>
+            <a href="x.html" target="tela" rel="external"><img src="imagens/logo-twitter.jpg" alt="logo-x"></a>
+            <a href="youtube.html" target="tela" rel="external"><img src="imagens/logo-youtube.jpg" alt="logo-youtube"></a>   
         </section>
     </main>
 </body>
