Done! Project finished

--- a/instagram.html
+++ b/instagram.html
@@ -4,38 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>- Instragram Home Page -</title>
-    <style>
-        *{
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-        }
-
-        /* Isso faz com que a BARRA DE ROLAGEM PARA AS LATERAIS SUMA!*/
-        ::-webkit-scrollbar{ 
-            height: 0px;
-            width: 0px;
-        }
-
-        img{
-            width: 100vw;
-        }
-
-        a{
-            background-color: darkred;
-            display: block;
-            text-align: center;
-            padding: 20px;
-            font-weight: bolder;
-            color: white;
-            text-decoration: none;
-        }
-
-        a:hover{
-            background-color: red;
-            color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/social.css">
 </head>
 <body>
     <img src="imagens/tela-instagram.jpg" alt="Intagram - Home Page">
