--- a/x.html
+++ b/x.html
@@ -4,37 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>- X Home Page - </title>
-    <style>
-        *{
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-        }
-
-        ::-webkit-scrollbar{
-            height: 0px;
-            width: 0px;
-        }
-
-        img{
-            width: 100vw;
-        }
-
-        a{
-            display: block;
-            padding: 20px;
-            text-align: center;
-            font-weight: bolder;
-            color: white;
-            text-decoration: none;
-            background-color: darkred;
-        }
-
-        a:hover{
-            color: black;
-            background-color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="/styles/social.css">
 </head>
 <body>
     <img src="imagens/tela-twitter.jpg" alt="X-Home Page">
