--- a/github.html
+++ b/github.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>- Youtube Home - </title>
+    <title>- Github Home Page - </title>
     <link rel="stylesheet" href="styles/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="Youtube-home">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/playlists" target="_blank">ACESSE</a>
+    <img src="imagens/tela-github.jpg" alt="Github Home Page">
+    <a href="https://github.com/gustavoguanabara" target="_blank" rel="external">ACESSE</a>
 </body>
 </html>
