--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <section id="iphone">
             <iframe src="home.html" name="tela" frameborder="0" id="tela"> Seu navegador não é compatível para mostrar esse conteúdo</iframe>
         </section>
-
+        
         <section id="redes-sociais">
             <a href="home.html" target="tela" rel="external"><img src="imagens/logo-home.jpg" alt="home-logo"></a>
-            <a href="imagens/tela-github.jpg" target="tela" rel="external"><img src="imagens/logo-github.jpg" alt="github-logo"></a>
+            <a href="github.html" target="tela" rel="external"><img src="imagens/logo-github.jpg" alt="github-logo"></a>
             <a href="facebook.html" target="tela" rel="external"><img src="imagens/logo-facebook.jpg" alt="facebook-logo"></a>
             <a href="instagram.html" target="tela" rel="external"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a>
             <a href="x.html" target="tela" rel="external"><img src="imagens/logo-twitter.jpg" alt="logo-x"></a>
