--- a/x.html
+++ b/x.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>- X Home Page - </title>
-    <link rel="stylesheet" href="/styles/social.css">
+    <link rel="stylesheet" href="styles/social.css">
 </head>
 <body>
     <img src="imagens/tela-twitter.jpg" alt="X-Home Page">
